--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,3 +1,41 @@
+.newpostform {
+  display: flex;
+  margin: 20px 0;
+  height: 150px;
+  /* width: 100%; */
+}
+
+.newpostform form {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+}
+
+.newpostform textarea {
+  display: flex;
+  width: 80%;
+  /* height: 100px; */
+  border: 1px solid #eee;
+  color: #777;
+  outline: none;
+  resize: none;
+  font-size: 0.9rem;
+}
+
+.newpostform button[type='submit'] {
+  display: flex;
+  width: 18%;
+  border: 1px solid #eee;
+  background-color: #fafafa;
+}
+
+.newpostform button[type='submit']:hover {
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
+
 .item {
   margin-top: 10px;
   padding: 10px;
