--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -5,8 +5,15 @@
 
 .usrInfo {
   display: flex;
-  padding-left: 20px;
-  margin-top: 10px;
+  align-items: center;
+  padding: 35px;
+  height: 75px;
+  background-image: url('/img/profile_wallpaper.jpg');
+}
+
+.usrAvaName {
+  display: flex;
+  align-items: stretch;
 }
 
 .usrAvatarImage {
@@ -16,11 +23,13 @@
 }
 
 .usrName {
-  align-self: center;
-  margin-left: 20px;
+  padding: 0 20px;
+  margin: 0 auto;
+  line-height: 4rem;
   font-size: 2rem;
   color: rgb(100, 66, 128, 0.8);
   font-weight: 500;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .usrDescription {
