--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -16,6 +16,7 @@
 .newpostform textarea {
   display: flex;
   width: 80%;
+  padding: 10px;
   /* height: 100px; */
   border: 1px solid #eee;
   color: #777;
@@ -25,14 +26,19 @@
 }
 
 .newpostform button[type='submit'] {
-  display: flex;
-  width: 18%;
+  /* display: flex; */
+  width: 16%;
   border: 1px solid #eee;
   background-color: #fafafa;
 }
 
+.newpostform button[type='submit'] img {
+  height: 32px;
+  width: 32px;
+}
 .newpostform button[type='submit']:hover {
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
+  background-color: gold;
   cursor: pointer;
 }
 
