--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -43,10 +43,18 @@
 }
 
 .item {
+  display: flex;
+  flex-direction: column;
   margin-top: 10px;
   padding: 10px;
   color: #777;
   background-color: #eee;
+}
+
+.item img {
+  width: 70%;
+  margin: 20px 0 5px;
+  align-self: center;
 }
 
 h3 {
