--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -42,7 +42,6 @@
 
 .message {
   padding: 15px;
-  margin-left: 10px;
   font-size: 1rem;
   /* margin: 10px;
   padding: 7px;
@@ -54,7 +53,7 @@
   height: 25px;
   width: 25px;
   vertical-align: top;
-  margin-right: 15px;
+  margin: 0 15px;
 }
 .mcontainer {
   display: flex;
