--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -1,3 +1,34 @@
+.item {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  padding: 10px;
+  color: #777;
+  background-color: #eee;
+}
+
+.item img {
+  width: 80%;
+  margin: 20px 0 5px;
+  align-self: center;
+}
+
+.item h3 {
+  color: #444444;
+  padding: 0;
+  margin: 0;
+}
+
+.item small {
+  font-size: 0.7rem;
+  color: #bbbbbb;
+}
+
+.item p {
+  text-align: justify;
+  padding: 0 10px;
+}
+
 .newpostform {
   display: flex;
   margin: 20px 0;
@@ -22,48 +53,22 @@
   color: #777;
   outline: none;
   resize: none;
-  font-size: 0.9rem;
+  font-size: 1.2rem;
 }
 
-.newpostform button[type='submit'] {
+.newpostform button[type="submit"] {
   /* display: flex; */
   width: 16%;
   border: 1px solid #eee;
   background-color: #fafafa;
 }
 
-.newpostform button[type='submit'] img {
+.newpostform button[type="submit"] img {
   height: 32px;
   width: 32px;
 }
-.newpostform button[type='submit']:hover {
+.newpostform button[type="submit"]:hover {
   /* background-color: #f5f5f5; */
   background-color: gold;
   cursor: pointer;
-}
-
-.item {
-  display: flex;
-  flex-direction: column;
-  margin-top: 10px;
-  padding: 10px;
-  color: #777;
-  background-color: #eee;
-}
-
-.item img {
-  width: 70%;
-  margin: 20px 0 5px;
-  align-self: center;
-}
-
-h3 {
-  color: #444444;
-  padding: 0;
-  margin: 0;
-}
-
-small {
-  font-size: 0.7rem;
-  color: #bbbbbb;
 }
