--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -1,14 +1,15 @@
-.profimg {
+/* .profimg {
   width: 100%;
   height: 140px;
-}
+} */
 
 .usrInfo {
   display: flex;
   align-items: center;
   padding: 35px;
   height: 75px;
-  background-image: url('/img/profile_wallpaper.jpg');
+  /* width: 100%; */
+  background-image: url("/img/profile_wallpaper.jpg");
 }
 
 .usrAvaName {
