--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -77,3 +77,51 @@
   width: 50%;
   text-align: right; */
 }
+
+/* FORM STYLE */
+
+.newpostform {
+  display: flex;
+  margin: 30px 0 0;
+  height: 42px;
+  /* width: 100%; */
+}
+
+.newpostform form {
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+}
+
+.newpostform textarea {
+  display: flex;
+  width: 100%;
+  padding: 10px;
+  /* height: 100px; */
+  border: 1px solid #eee;
+  color: #777;
+  outline: none;
+  resize: none;
+  font-size: 1.2rem;
+  background-color: #fafafa;
+}
+
+.newpostform button[type="submit"] {
+  /* display: flex; */
+  width: 10%;
+  border: 1px solid #eee;
+  /* background-color: gold; */
+  background-color: #ссс;
+}
+
+.newpostform button[type="submit"] img {
+  height: 24px;
+  width: 24px;
+}
+.newpostform button[type="submit"]:hover {
+  /* background-color: #f5f5f5; */
+  background-color: gold;
+  cursor: pointer;
+}
