--- a/src/components/Profile/MyPosts/Post/Post.module.css
+++ b/src/components/Profile/MyPosts/Post/Post.module.css
@@ -60,7 +60,7 @@
   /* display: flex; */
   width: 16%;
   border: 1px solid #eee;
-  background-color: #fafafa;
+  background-color: #f0f0f0;
 }
 
 .newpostform button img {
